// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolver should fail 1 1`] = `"Cannot assign 'int' to 'bool'"`;

exports[`Resolver should fail 2 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 3 1`] = `"Cannot assign 'int' to 'bool'"`;

exports[`Resolver should fail 4 1`] = `"Variable 'x' not found"`;

exports[`Resolver should fail 5 1`] = `"Variable 'x' already exists"`;

exports[`Resolver should fail 6 1`] = `"Field 'nonExistentField' not found"`;

exports[`Resolver should fail 7 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 8 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 9 1`] = `"Operands must be integers"`;

exports[`Resolver should fail 10 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 11 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 12 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 13 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 14 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 15 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 16 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 17 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 18 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 19 1`] = `"Cannot assign 'bool' to 'int'"`;

exports[`Resolver should fail 20 1`] = `"Cannot assign 'int' to 'bool'"`;

exports[`Resolver should resolve 1 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    10 => {
      "type": "int",
    },
    11 => {
      "type": "int",
    },
    16 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    18 => {
      "type": "int",
    },
    19 => {
      "type": "int",
    },
    20 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 2 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "bool",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "booleanLiteral",
            "value": true,
          },
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    10 => {
      "type": "bool",
    },
    12 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "booleanLiteral",
            "value": true,
          },
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    14 => {
      "type": "bool",
    },
    15 => {
      "type": "bool",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": true,
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 3 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "100",
          },
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "player",
      "type": "struct",
    },
    10 => {
      "type": "int",
    },
    12 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "100",
          },
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "player",
      "type": "struct",
    },
    14 => {
      "type": "int",
    },
    15 => {
      "type": "int",
    },
    16 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [
        {
          "defaultValue": 100,
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
    },
  },
}
`;

exports[`Resolver should resolve 4 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "bool",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "booleanLiteral",
            "value": true,
          },
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    10 => {
      "type": "bool",
    },
    12 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "booleanLiteral",
            "value": true,
          },
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    14 => {
      "type": "bool",
    },
    15 => {
      "type": "bool",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": true,
          "name": "isActive",
          "type": {
            "type": "bool",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 5 1`] = `
CompilerContext {
  "expressions": Map {
    5 => {
      "type": "int",
    },
    8 => {
      "type": "int",
    },
    9 => {
      "type": "int",
    },
    10 => {
      "type": "bool",
    },
    13 => {
      "type": "int",
    },
    17 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 6 1`] = `
CompilerContext {
  "expressions": Map {
    5 => {
      "type": "int",
    },
    8 => {
      "type": "int",
    },
    9 => {
      "type": "int",
    },
    10 => {
      "type": "bool",
    },
    13 => {
      "type": "int",
    },
    16 => {
      "type": "int",
    },
    17 => {
      "type": "int",
    },
    18 => {
      "type": "bool",
    },
    21 => {
      "type": "int",
    },
    25 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 7 1`] = `
CompilerContext {
  "expressions": Map {
    5 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 8 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    10 => {
      "type": "int",
    },
    11 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 9 1`] = `
CompilerContext {
  "expressions": Map {
    5 => {
      "type": "int",
    },
    10 => {
      "type": "int",
    },
    11 => {
      "type": "int",
    },
    12 => {
      "type": "int",
    },
    17 => {
      "type": "int",
    },
    19 => {
      "type": "int",
    },
    20 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 10 1`] = `
CompilerContext {
  "expressions": Map {
    5 => {
      "type": "int",
    },
    10 => {
      "type": "int",
    },
    11 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 11 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "type": "int",
    },
    14 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    16 => {
      "type": "int",
    },
    18 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    20 => {
      "type": "int",
    },
    21 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": 20,
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 12 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "type": "int",
    },
    14 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    16 => {
      "type": "int",
    },
    18 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    20 => {
      "type": "int",
    },
    21 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": 20,
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 13 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    10 => {
      "type": "int",
    },
    11 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [],
    },
  },
}
`;

exports[`Resolver should resolve 14 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "100",
          },
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "player",
      "type": "struct",
    },
    10 => {
      "type": "int",
    },
    12 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "100",
          },
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "player",
      "type": "struct",
    },
    14 => {
      "type": "int",
    },
    15 => {
      "type": "int",
    },
    16 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [],
      "handlers": [],
      "playerStats": [
        {
          "defaultValue": 100,
          "name": "score",
          "type": {
            "type": "int",
          },
        },
      ],
    },
  },
}
`;

exports[`Resolver should resolve 15 1`] = `
CompilerContext {
  "expressions": Map {
    4 => {
      "type": "int",
    },
    8 => {
      "type": "int",
    },
    12 => {
      "type": "int",
    },
    18 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    20 => {
      "type": "int",
    },
    22 => {
      "fields": [
        {
          "defaultValue": {
            "id": 4,
            "kind": "integerLiteral",
            "value": "10",
          },
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": {
            "id": 8,
            "kind": "integerLiteral",
            "value": "20",
          },
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "global",
      "type": "struct",
    },
    24 => {
      "type": "int",
    },
    25 => {
      "type": "int",
    },
    30 => {
      "type": "int",
    },
    32 => {
      "fields": [
        {
          "defaultValue": {
            "id": 12,
            "kind": "integerLiteral",
            "value": "30",
          },
          "name": "z",
          "type": {
            "type": "int",
          },
        },
      ],
      "name": "player",
      "type": "struct",
    },
    34 => {
      "type": "int",
    },
    35 => {
      "type": "int",
    },
    40 => {
      "type": "int",
    },
    41 => {
      "type": "int",
    },
    42 => {
      "type": "int",
    },
    47 => {
      "type": "int",
    },
    48 => {
      "type": "int",
    },
    49 => {
      "type": "int",
    },
    54 => {
      "type": "int",
    },
    55 => {
      "type": "int",
    },
    56 => {
      "type": "int",
    },
    61 => {
      "type": "int",
    },
    62 => {
      "type": "int",
    },
    63 => {
      "type": "bool",
    },
    68 => {
      "type": "bool",
    },
    69 => {
      "type": "bool",
    },
    70 => {
      "type": "bool",
    },
    75 => {
      "type": "bool",
    },
    76 => {
      "type": "bool",
    },
    81 => {
      "type": "int",
    },
    82 => {
      "type": "int",
    },
    87 => {
      "type": "int",
    },
    88 => {
      "type": "int",
    },
    93 => {
      "type": "int",
    },
    94 => {
      "type": "int",
    },
    95 => {
      "type": "int",
    },
    97 => {
      "type": "int",
    },
    98 => {
      "type": "int",
    },
    99 => {
      "type": "int",
    },
    100 => {
      "type": "int",
    },
    105 => {
      "type": "int",
    },
    107 => {
      "type": "int",
    },
    108 => {
      "type": "int",
    },
    109 => {
      "type": "int",
    },
    110 => {
      "type": "int",
    },
    115 => {
      "type": "int",
    },
    117 => {
      "type": "int",
    },
    118 => {
      "type": "int",
    },
    119 => {
      "type": "int",
    },
    120 => {
      "type": "int",
    },
    125 => {
      "type": "int",
    },
    126 => {
      "type": "int",
    },
    127 => {
      "type": "bool",
    },
    132 => {
      "type": "bool",
    },
    133 => {
      "type": "bool",
    },
    134 => {
      "type": "bool",
    },
    139 => {
      "type": "bool",
    },
    140 => {
      "type": "bool",
    },
    145 => {
      "type": "int",
    },
    146 => {
      "type": "int",
    },
    151 => {
      "type": "int",
    },
    152 => {
      "type": "int",
    },
    157 => {
      "type": "int",
    },
    158 => {
      "type": "int",
    },
    159 => {
      "type": "int",
    },
    161 => {
      "type": "int",
    },
    162 => {
      "type": "int",
    },
    163 => {
      "type": "int",
    },
    164 => {
      "type": "int",
    },
    169 => {
      "type": "int",
    },
    171 => {
      "type": "int",
    },
    172 => {
      "type": "int",
    },
    173 => {
      "type": "int",
    },
    174 => {
      "type": "int",
    },
    179 => {
      "type": "int",
    },
    180 => {
      "type": "int",
    },
    181 => {
      "type": "int",
    },
    186 => {
      "type": "int",
    },
    187 => {
      "type": "int",
    },
    188 => {
      "type": "bool",
    },
    193 => {
      "type": "bool",
    },
    194 => {
      "type": "bool",
    },
    195 => {
      "type": "bool",
    },
    200 => {
      "type": "bool",
    },
    201 => {
      "type": "bool",
    },
    206 => {
      "type": "int",
    },
    207 => {
      "type": "int",
    },
    212 => {
      "type": "int",
    },
    213 => {
      "type": "int",
    },
  },
  "houses": Map {
    "MyHouse" => {
      "globalStats": [
        {
          "defaultValue": 10,
          "name": "x",
          "type": {
            "type": "int",
          },
        },
        {
          "defaultValue": 20,
          "name": "y",
          "type": {
            "type": "int",
          },
        },
      ],
      "handlers": [],
      "playerStats": [
        {
          "defaultValue": 30,
          "name": "z",
          "type": {
            "type": "int",
          },
        },
      ],
    },
  },
}
`;
